modified:   cloudhistory-ec2.yml  euca2ools v2.1 ok

--- a/cloudhistory-ec2.yml
+++ b/cloudhistory-ec2.yml
@@ -49,16 +49,16 @@
       action: get_url url=http://downloads.eucalyptus.com/software/eucalyptus/3.2/rhel/6/x86_64/eucalyptus-release-3.2.noarch.rpm dest=/tmp/ thirsty=yes
     
     - name: Download euca2ools repo RPM
-      action: get_url url=http://downloads.eucalyptus.com/software/euca2ools/3.0/rhel/6Server/x86_64/euca2ools-release-3.0.noarch.rpm dest=/tmp/ thirsty=yes
+      action: get_url url=http://downloads.eucalyptus.com/software/euca2ools/2.1/centos/6/x86_64/euca2ools-release-2.1.noarch.rpm dest=/tmp/ thirsty=yes
 
-    - name: download epel repo
+    - name: download epel 6 repo
       action: get_url url=http://downloads.eucalyptus.com/software/euca2ools/3.0/rhel/6Server/x86_64/epel-release-6.noarch.rpm dest=/tmp/ thirsty=yes
 
     - name: Configure Eucalyptus repo
       action: command rpm -Uvh --force /tmp/eucalyptus-release-3.2.noarch.rpm 
 
-    - name: Configure Euca2ool v3 repo
-      action: command rpm -Uvh --force /tmp/euca2ools-release-3.0.noarch.rpm
+    - name: Configure Euca2ool v2.1 repo
+      action: command rpm -Uvh --force /tmp/euca2ools-release-2.1.noarch.rpm
 
     - name: Configure Epel repo
       action: command rpm -Uvh --force /tmp/epel-release-6.noarch.rpm
