modified:   euca-dw.yml  added dbusername

--- a/vars/euca-dw.yml
+++ b/vars/euca-dw.yml
@@ -3,6 +3,7 @@ pgport: 8443
 pgdir: /ephemeral
 pgdata: /ephemeral/pgsql/9.1/data
 pglog: /ephemeral/pgsql/9.1/pgstartup.log
+dbusername: eemon
 eemondbpasswd: histpasswd
 reemondbpasswd: readonlypasswd
 cloudname: mycloud
