--- a/cloudhistory-ec2.yml
+++ b/cloudhistory-ec2.yml
@@ -20,10 +20,11 @@
       local_action: add_host hostname=${item.public_ip} groupname=reporting
       with_items: ${ec2.instances}
 
-    - name: Pausing to wait for instance to start
-      action: pause seconds=20
-      # Pause to allow the instance to finish boot
-      
+     
+    - name: Wait for SSH to come up
+      local_action: wait_for host=${item.public_ip} port=22 delay=60 timeout=320 state=started
+      with_items: ${ec2.instances}
+ 
 - name: Configure instance
   hosts: reporting
   user: root
@@ -46,7 +47,7 @@
       action: user name=eemon home={{ eemonhome }} password=VW01cZ06C7w7g
 
     - name: Download eucalyptus release RPM
-      action: get_url url=http://downloads.eucalyptus.com/software/eucalyptus/3.2/rhel/6/x86_64/eucalyptus-release-3.2.noarch.rpm dest=/tmp/ thirsty=yes
+      action: get_url url=http://downloads.eucalyptus.com/software/eucalyptus/3.3/rhel/6/x86_64/eucalyptus-release-3.3.noarch.rpm dest=/tmp/ thirsty=yes
     
     - name: Download euca2ools repo RPM
       action: get_url url=http://downloads.eucalyptus.com/software/euca2ools/2.1/centos/6/x86_64/euca2ools-release-2.1.noarch.rpm dest=/tmp/ thirsty=yes
@@ -55,7 +56,7 @@
       action: get_url url=http://downloads.eucalyptus.com/software/euca2ools/3.0/rhel/6Server/x86_64/epel-release-6.noarch.rpm dest=/tmp/ thirsty=yes
 
     - name: Configure Eucalyptus repo
-      action: command rpm -Uvh --force /tmp/eucalyptus-release-3.2.noarch.rpm 
+      action: command rpm -Uvh --force /tmp/eucalyptus-release-3.3.noarch.rpm 
 
     - name: Configure Euca2ool v2.1 repo
       action: command rpm -Uvh --force /tmp/euca2ools-release-2.1.noarch.rpm
@@ -159,7 +160,7 @@
       action: copy src=files/move_db_dump.sh dest=/root
 
     - name: Create Cronjob for moving backup file
-     action: cron name="move backups" minute=30 hour="5" user=root job="timeout 720 /root/move_db_dump.sh {{ cloudname }} >/dev/null 2>&1"
+      action: cron name="move backups" minute=30 hour="5" user=root job="timeout 720 /root/move_db_dump.sh {{ cloudname }} >/dev/null 2>&1"
 
     - name: Create cloudhistory directory
       action: command su - eemon -l -c "mkdir -p {{ eemonhome }}/cloudhistory/"
