--- a/cloudhistory-ec2.yml
+++ b/cloudhistory-ec2.yml
@@ -157,7 +157,7 @@
       - create_cloudstatus_table.sql
 
     - name: Copy template move database dump script
-      action: template src=files/move_db_dump.j2 dest=/root/move_db_dump.sh
+      action: template src=templates/move_db_dump.j2 dest=/root/move_db_dump.sh
 
     - name: Create Cronjob for moving backup file
       action: cron name="move backups" minute=30 hour="5" user=root job="timeout 720 /root/move_db_dump.sh {{ cloudname }} >/dev/null 2>&1"
